<resources>
    <string name="app_name">Application 1</string>
    <string name="choose_a_character">Choose a character</string>
    <string name="game_of_thrones">Game of Thrones</string>
    <string name="stark">Stark</string>
    <string name="by_maya_kerem">by Maya Kerem</string>
    <string name="lannister">Lannister</string>
    <string name="choose_a_family">Choose a family:</string>
    <string name="textview">TextView</string>
    <string name="images_from_got">images_from_got</string>
    <string name="choose_a_family2">CHOOSE A FAMILY</string>
    <string name="todo">TODO</string>
    <string name="title_headline">TITLE HEADLINE</string>
</resources>
